# awesome-api

./: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 6717d6c7a259_add_user_model.py  77af61c17c9a_first_migration.py  cb41f4ce58f7_add_post_post_relationship.py  feb7af9e3a29_add_user_post_relationship.py
src/: main.py  settings.py
src/database/: connection.py
src/dependencies/: auth.py  db.py  main.py  post.py  user.py
src/models/: __init__.py  post.py  user.py
src/routers/: auth.py  post.py  users.py
src/schemas/: __init__.py  auth.py  post.py  user.py
src/services/: auth.py  main.py  post.py  user.py
